- php-cs-fixer updates (mamba)
- started conversion to XMF (mamba)
    &nbsp;&nbsp;- updated addInfoBoxLine entries (mamba)
    &nbsp;&nbsp;- displayNavigation(basename(__FILE__))  (mamba)
    &nbsp;&nbsp;- changed to - displayButton('left') (mamba)
- PHP 8.2 adjustments (mamba)
- refactoring to Namespaces (mamba)
- added Blocksadmin (mamba)
- added Migration (mamba)


<h5>2.07 Beta 1      [NOT RELEASED]</h5>
<hr>
    - updated for XOOPS 2.5.7.1 and PHP 5.6 (mamba)

<h5>2.06 (catzwolf)</h5>
<hr>
    - fixed naming convention on the FCKeditor. Should now work on all systems.
    - fixed naming convention on file sanitize_textbox.php in the filters and put in force an error check to prevent errors and return default.
    - fixed naming convention on file sanitize_textbox.php in the filters.
    - Fixed: New Menu block was using the wrong 'string' for permissions. This block used work as expected now.
    - Removed: Removed code for older editors.
    - Removed: Removed code  now considered depreciated from Xoops 2.3.
    - Changed: Removed Xoops Captcha and repalaced it with the old WF-Channel version. This was due to a number of issues with the Xoops Version.
    - Changed: Used many of the new \XoopsForms and elements that were added in Xoops 2.3.
    - Changed: Updated to work on PHP 2.3. The creation of Articles and such should now be possible.
    - Changed: Changed Captcha to now use Xoops Captcha.
    - Changed: Updated some language defines and corrected spelling errors.
    - Changed: WF-Channel should work with XoopsEditors now.
    - Fixed Many other issues, bugs and features that now lost to me while updaing this module.
    - Fixed: RSS Channels should be working now. If not.... bite me!

<h5>2.05</h5>
<hr>
    - Fixed: The upgrader has been fixed and should update correctly now.
    - Changes: This version fixed many issues, and I'm sorry but I didn't take notice or notes

<h5>2.04</h5>
<hr>