@@ -1,0 +1,60 @@
+-
+    gperm_groupid: '1'
+    gperm_itemid: '1'
+    gperm_modid: '46'
+    gperm_name: page_read
+-
+    gperm_groupid: '1'
+    gperm_itemid: '2'
+    gperm_modid: '46'
+    gperm_name: page_read
+-
+    gperm_groupid: '1'
+    gperm_itemid: '3'
+    gperm_modid: '46'
+    gperm_name: page_read
+-
+    gperm_groupid: '1'
+    gperm_itemid: '4'
+    gperm_modid: '46'
+    gperm_name: page_read
+-
+    gperm_groupid: '1'
+    gperm_itemid: '5'
+    gperm_modid: '46'
+    gperm_name: page_read
+-
+    gperm_groupid: '1'
+    gperm_itemid: '7'
+    gperm_modid: '46'
+    gperm_name: page_read
+-
+    gperm_groupid: '1'
+    gperm_itemid: '8'
+    gperm_modid: '46'
+    gperm_name: page_read
+-
+    gperm_groupid: '1'
+    gperm_itemid: '9'
+    gperm_modid: '46'
+    gperm_name: page_read
+-
+    gperm_groupid: '1'
+    gperm_itemid: '10'
+    gperm_modid: '46'
+    gperm_name: page_read
+-
+    gperm_groupid: '2'
+    gperm_itemid: '10'
+    gperm_modid: '46'
+    gperm_name: page_read
+-
+    gperm_groupid: '1'
+    gperm_itemid: '11'
+    gperm_modid: '46'
+    gperm_name: page_read
+-
+    gperm_groupid: '2'
+    gperm_itemid: '11'
+    gperm_modid: '46'
+    gperm_name: page_read
