@@ -1,0 +1,19 @@
+-
+    wfcr_id: '1'
+    wfcr_title: 'Refer a friend'
+    wfcr_content: '<p>Let a friend know about us.</p>'
+    wfcr_mainpage: '1'
+    wfcr_image: '|300|250'
+    wfcr_email: '1'
+    wfsr_ublurb: '1'
+    wfcr_dblurb: 'Please visit this fantastic website that I have just found.'
+    wfcr_privacy: '1'
+    wfcr_emailcheck: '1'
+    wfcr_privacytext: 'We will not and do not collect, sell, or distribute in any way or form the email addresses gathered through this referral option. The intended recipient(s) will only receive the following message and no one else.'
+    wfcr_counter: '1'
+    wfcr_caption: ''
+    dohtml: '1'
+    doxcode: '1'
+    dosmiley: '1'
+    doimage: '0'
+    dobr: '0'
