@@ -25,7 +25,7 @@ $modversion = [
     'name'                => _MI_WFC_CHANNEL,
     'description'         => _MI_WFC_CHANNELDESC,
     'official'            => 0, //1 indicates supported by XOOPS Dev Team, 0 means 3rd party supported
-    'author'              => 'John Neill',
+    'author'              => 'John Neill, Mamba',
     'author_mail'         => 'author-email',
     'author_website_url'  => 'https://xoops.org',
     'author_website_name' => 'XOOPS',
